--- a/ZBJCalendar.xcodeproj/xcshareddata/xcschemes/ZBJCalendar.xcscheme
+++ b/ZBJCalendar.xcodeproj/xcshareddata/xcschemes/ZBJCalendar.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0710"
+   LastUpgradeVersion = "1400"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "32F7EBE51C16779F00ED2DA4"
-               BuildableName = "ZBJCalendar.app"
+               BlueprintIdentifier = "E45DA6C22912AC7500C049B3"
+               BuildableName = "ZBJCalendar.framework"
                BlueprintName = "ZBJCalendar"
-               ReferencedContainer = "container:ZBJCalendar.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "32F7EBFE1C16779F00ED2DA4"
-               BuildableName = "ZBJCalendarTests.xctest"
-               BlueprintName = "ZBJCalendarTests"
                ReferencedContainer = "container:ZBJCalendar.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -41,36 +27,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "32F7EBE51C16779F00ED2DA4"
-            BuildableName = "ZBJCalendar.app"
-            BlueprintName = "ZBJCalendar"
-            ReferencedContainer = "container:ZBJCalendar.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "32F7EBFE1C16779F00ED2DA4"
-               BuildableName = "ZBJCalendarTests.xctest"
-               BlueprintName = "ZBJCalendarTests"
-               ReferencedContainer = "container:ZBJCalendar.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "32F7EC091C16779F00ED2DA4"
-               BuildableName = "ZBJCalendarUITests.xctest"
-               BlueprintName = "ZBJCalendarUITests"
-               ReferencedContainer = "container:ZBJCalendar.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -83,16 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "32F7EBE51C16779F00ED2DA4"
-            BuildableName = "ZBJCalendar.app"
-            BlueprintName = "ZBJCalendar"
-            ReferencedContainer = "container:ZBJCalendar.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -100,16 +47,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "32F7EBE51C16779F00ED2DA4"
-            BuildableName = "ZBJCalendar.app"
+            BlueprintIdentifier = "E45DA6C22912AC7500C049B3"
+            BuildableName = "ZBJCalendar.framework"
             BlueprintName = "ZBJCalendar"
             ReferencedContainer = "container:ZBJCalendar.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
